# ai-sql-query-generator

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: company.db  test_database.db
src/: Query_prepocessor.py  SQL_Connector.py  SQL_generator.py  app.py  basic_app.py  create_test_DB.py  database_handler.py  main.py
tests/: conftest.py  test_SQL_Connector.py  test_database_handler.py
